test/error/E48.chigfn
{
	"type": "function",
	"name": "helloworld",
	"data_inputs": [],
	"data_outputs": []
}
